<resources>
    <string name="app_name">TikTok助手</string>
    <string name="settings_isDisabledWatermark_checkbox_pref">isDisabledWatermark</string>
    <string name="settings_isDisabledWatermark_title">去水印</string>
    <string name="settings_autosave_checkbox_pref">autosave</string>
    <string name="settings_autosave_title">点赞自动保存视频</string>
    <string name="settings_region_dialog_title">请选择地区</string>
    <string name="settings_region_title">地区</string>
    <string name="settings_region_list_pref">region</string>
    <string-array name="settings_region_entries">
        <item>安道尔</item>
        <item>阿联酋</item>
        <item>阿富汗</item>
        <item>安提瓜岛</item>
        <item>安圭拉</item>
        <item>阿尔巴尼亚</item>
        <item>亚美尼亚</item>
        <item>安哥拉</item>
        <item>阿根廷</item>
        <item>美属萨摩亚</item>
        <item>奥地利</item>
        <item>澳大利亚</item>
        <item>阿鲁巴</item>
        <item>阿塞拜疆</item>
        <item>波斯尼亚和黑塞哥维那</item>
        <item>巴巴多斯岛</item>
        <item>孟加拉国</item>
        <item>比利时</item>
        <item>布基纳法索</item>
        <item>保加利亚</item>
        <item>巴林</item>
        <item>布隆迪</item>
        <item>贝宁</item>
        <item>百慕大</item>
        <item>文莱</item>
        <item>玻利维亚</item>
        <item>博内尔，圣尤斯特歇斯和沙巴</item>
        <item>巴西</item>
        <item>巴哈马</item>
        <item>不丹</item>
        <item>博茨瓦纳</item>
        <item>白俄罗斯</item>
        <item>伯利兹</item>
        <item>加拿大</item>
        <item>刚果民主共和国</item>
        <item>中非共和国</item>
        <item>刚果共和国</item>
        <item>瑞士</item>
        <item>科特迪瓦</item>
        <item>库克群岛</item>
        <item>智利</item>
        <item>喀麦隆</item>
        <item>哥伦比亚</item>
        <item>哥斯达黎加</item>
        <item>古巴</item>
        <item>佛得角</item>
        <item>库拉索</item>
        <item>塞浦路斯</item>
        <item>捷克</item>
        <item>德国</item>
        <item>吉布提</item>
        <item>丹麦</item>
        <item>多米尼加</item>
        <item>多米尼加共和国</item>
        <item>阿尔及利亚</item>
        <item>厄瓜多尔</item>
        <item>爱沙尼亚</item>
        <item>埃及</item>
        <item>西撒哈拉</item>
        <item>厄立特里亚</item>
        <item>西班牙</item>
        <item>埃塞俄比亚</item>
        <item>芬兰</item>
        <item>斐济</item>
        <item>福克兰群岛</item>
        <item>密克罗尼西亚联邦</item>
        <item>法罗群岛</item>
        <item>法国</item>
        <item>加蓬</item>
        <item>英国</item>
        <item>格林纳达</item>
        <item>格鲁吉亚</item>
        <item>法属圭亚那</item>
        <item>根西岛</item>
        <item>加纳</item>
        <item>直布罗陀</item>
        <item>格陵兰</item>
        <item>冈比亚</item>
        <item>几内亚</item>
        <item>瓜德罗普岛</item>
        <item>赤道几内亚</item>
        <item>希腊</item>
        <item>危地马拉</item>
        <item>关岛</item>
        <item>几内亚比绍共和国</item>
        <item>圭亚那</item>
        <item>香港</item>
        <item>洪都拉斯</item>
        <item>克罗地亚</item>
        <item>海地</item>
        <item>匈牙利</item>
        <item>印度尼西亚</item>
        <item>爱尔兰</item>
        <item>以色列</item>
        <item>马恩岛</item>
        <item>印度</item>
        <item>英属印度洋领地</item>
        <item>伊拉克</item>
        <item>伊朗</item>
        <item>冰岛</item>
        <item>意大利</item>
        <item>泽西岛</item>
        <item>牙买加</item>
        <item>约旦</item>
        <item>日本</item>
        <item>肯尼亚</item>
        <item>吉尔吉斯斯坦</item>
        <item>柬埔寨</item>
        <item>基里巴斯</item>
        <item>科摩罗</item>
        <item>圣基茨和尼维斯</item>
        <item>朝鲜</item>
        <item>韩国</item>
        <item>科威特</item>
        <item>开曼群岛</item>
        <item>哈萨克斯坦</item>
        <item>老挝</item>
        <item>黎巴嫩</item>
        <item>圣卢西亚</item>
        <item>列支敦士登</item>
        <item>斯里兰卡</item>
        <item>利比亚</item>
        <item>莱索托</item>
        <item>立陶宛</item>
        <item>卢森堡</item>
        <item>拉脱维亚</item>
        <item>利比亞</item>
        <item>摩洛哥</item>
        <item>摩纳哥</item>
        <item>摩尔多瓦</item>
        <item>黑山共和国</item>
        <item>马达加斯加</item>
        <item>马绍尔群岛</item>
        <item>马其顿</item>
        <item>马里</item>
        <item>缅甸</item>
        <item>蒙古</item>
        <item>澳门</item>
        <item>北马里亚纳群岛</item>
        <item>马提尼克岛</item>
        <item>毛里塔尼亚</item>
        <item>蒙塞拉特岛</item>
        <item>马耳他</item>
        <item>毛里求斯</item>
        <item>马尔代夫</item>
        <item>马拉维</item>
        <item>墨西哥</item>
        <item>马来西亚</item>
        <item>莫桑比克</item>
        <item>纳米比亚</item>
        <item>新喀里多尼亚</item>
        <item>尼日尔</item>
        <item>诺福克岛</item>
        <item>尼日利亚</item>
        <item>尼加拉瓜</item>
        <item>荷兰</item>
        <item>挪威</item>
        <item>尼泊尔</item>
        <item>瑙鲁</item>
        <item>纽埃</item>
        <item>新西兰</item>
        <item>阿曼</item>
        <item>巴拿马</item>
        <item>秘鲁</item>
        <item>法属玻利尼西亚</item>
        <item>巴布亚新几内亚</item>
        <item>菲律宾</item>
        <item>巴基斯坦</item>
        <item>波兰</item>
        <item>圣皮埃尔和密克隆</item>
        <item>波多黎各</item>
        <item>巴勒斯坦</item>
        <item>葡萄牙</item>
        <item>帕劳</item>
        <item>巴拉圭</item>
        <item>卡塔尔</item>
        <item>留尼汪</item>
        <item>罗马尼亚</item>
        <item>塞尔维亚</item>
        <item>俄罗斯</item>
        <item>卢旺达</item>
        <item>沙特阿拉伯</item>
        <item>所罗门群岛</item>
        <item>塞舌尔</item>
        <item>苏丹</item>
        <item>瑞典</item>
        <item>新加坡</item>
        <item>圣赫勒拿</item>
        <item>斯洛文尼亚</item>
        <item>斯洛伐克</item>
        <item>塞拉利昂</item>
        <item>圣马力诺</item>
        <item>塞内加尔</item>
        <item>索马里</item>
        <item>苏里南</item>
        <item>南苏丹</item>
        <item>圣多美和普林西比</item>
        <item>萨尔瓦多</item>
        <item>圣马丁岛</item>
        <item>叙利亚</item>
        <item>斯威士兰</item>
        <item>特克斯和凯科斯群岛</item>
        <item>乍得</item>
        <item>多哥</item>
        <item>泰国</item>
        <item>塔吉克斯坦</item>
        <item>托克劳</item>
        <item>东帝汶</item>
        <item>土库曼斯坦</item>
        <item>突尼斯</item>
        <item>汤加</item>
        <item>土耳其</item>
        <item>特立尼达和多巴哥</item>
        <item>图瓦卢</item>
        <item>台湾</item>
        <item>坦桑尼亚</item>
        <item>乌克兰</item>
        <item>乌干达</item>
        <item>美国</item>
        <item>乌拉圭</item>
        <item>乌兹别克斯坦</item>
        <item>圣文森特和格林纳丁斯</item>
        <item>委内瑞拉</item>
        <item>英属维京群岛</item>
        <item>美属维京群岛</item>
        <item>越南</item>
        <item>瓦努阿图</item>
        <item>瓦利斯和富图纳群岛</item>
        <item>萨摩亚</item>
        <item>也门</item>
        <item>马约特</item>
        <item>南非</item>
        <item>赞比亚</item>
        <item>津巴布韦</item>
    </string-array>
</resources>